--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/src/assets/images/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>ARPCI</title>
+  <title>LKCI</title>
 </head>
 
 <body class="bg-white">
